--- a/.dev.env
+++ b/.dev.env
@@ -3,6 +3,6 @@ PORT=8000
 #Config database
 DB_HOST=localhost
 DB_PORT=5433
-DB_USER=admin
-DB_PASSWORD=admin123
-DB_NAME=spotify
+POSTGRES_DB=spotify
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin123
