--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "export NODE_ENV=development && npm run build && typeorm-ts-node-esm -d ./dist/config/data.source.js",
+    "m:gen": "npm run typeorm -- migration:generate",
+    "m:run": "export NODE_ENV=development && npm run orm:init migration:run"
   },
   "dependencies": {
     "@nestjs/core": "^10.0.0",
@@ -44,6 +47,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "npx": "^10.2.2",
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
