--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "export NODE_ENV=development && npm run build && typeorm-ts-node-esm -d ./dist/config/data.source.js",
+    "typeorm": "export NODE_ENV=development && npm run build && typeorm-ts-node-esm -d ./dist/src/config/data.source.js",
     "m:gen": "npm run typeorm -- migration:generate",
     "m:run": "export NODE_ENV=development && npm run orm:init migration:run"
   },
