--- a/.development.env
+++ b/.development.env
@@ -1,6 +1,6 @@
 #Config database
-DB_HOST=localhost
-DB_PORT=5433
+DB_HOST=postgres
+DB_PORT=5432
 POSTGRES_DB=spotify
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin123
