--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,20 @@ version: '3.8'
 services:
   postgres:
     image: postgres:16.0
-    container_name: spotify_dev
+    container_name: spotify
     restart: always
     env_file:
       - .development.env
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - 5433:5432
+      - 5432:5432
+  api:
+    build: .
+    ports:
+      - 3000:3000
+    volumes:
+      - ./csv_files:/Spotify/csv_files
+    depends_on:
+      - postgres
+
